compiled all models in main

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,8 @@
-Libraries for XGBoost script:
--pandas 
--numpy 
--xgboost 
--matplotlib
+pandas 
+numpy 
+xgboost 
+matplotlib
+scikit-learn
+tensorflow
 
-Parameters for xgboost_model function:
--split_by_date = False  # If True, split the dataset by date into training and testing sets
--split_date = '2019-12-31' # Date to split the dataset on
--training_percent = 0.2 # Percentage of data to use for training
--data_path = 'cis4930-paper/data/aal_features.csv' # Path to the dataset
--features = ['Close', 'Lag1_AAL', 'Lag2_AAL', 'Lag3_AAL', 'Lag4_AAL', 'Lag5_AAL'] # Features to use for training, must include target feature
--target_feature = 'Close' # Target feature to predict
 
